@@ -45,6 +45,7 @@ from astrapy.defaults import (
     DEFAULT_INSERT_MANY_CHUNK_SIZE,
     DEFAULT_INSERT_MANY_CONCURRENCY,
     NAMESPACE_DEPRECATION_NOTICE_METHOD,
+    SET_CALLER_DEPRECATION_NOTICE,
 )
 from astrapy.exceptions import (
     BulkWriteException,
@@ -502,6 +503,12 @@ class Collection:
             caller_version=caller_version or self.caller_version,
         )
 
+    @deprecation.deprecated(  # type: ignore[misc]
+        deprecated_in="1.5.1",
+        removed_in="2.0.0",
+        current_version=__version__,
+        details=SET_CALLER_DEPRECATION_NOTICE,
+    )
     def set_caller(
         self,
         caller_name: str | None = None,
@@ -3089,6 +3096,12 @@ class AsyncCollection:
             caller_version=caller_version or self.caller_version,
         )
 
+    @deprecation.deprecated(  # type: ignore[misc]
+        deprecated_in="1.5.1",
+        removed_in="2.0.0",
+        current_version=__version__,
+        details=SET_CALLER_DEPRECATION_NOTICE,
+    )
     def set_caller(
         self,
         caller_name: str | None = None,
