@@ -3,7 +3,7 @@ requires-python = ">=3.8"
 
 [tool.poetry]
 name = "astrapy"
-version = "1.5.0"
+version = "1.5.1"
 description = "AstraPy is a Pythonic SDK for DataStax Astra and its Data API"
 authors = [
     "Stefano Lottini <stefano.lottini@datastax.com>",
